--- a/ViteBusiness/Assets/fil-PH.lproj/Localizable.strings
+++ b/ViteBusiness/Assets/fil-PH.lproj/Localizable.strings
@@ -232,7 +232,7 @@
 /* BalanceInfo */
 "balance.info.detail.balance.title" = "Balanse";
 "balance.info.detail.unconfirmed.title" = "Hindi Natanggap";
-"balance.info.detail.unconfirmed.quota.title" = "(%@ UT)";
+"balance.info.detail.unconfirmed.quota.title" = "(%@ Quota)";
 "balance.info.detail.available.amount.title" = "Pwedeng gamitin";
 "balance.info.detail.pledge.amount.title" = "Locked";
 "balance.info.detail.show.transactions.button.title" = "Suriin ang kasaysayan ng transaksyon sa Ethereum Explorer";
@@ -242,7 +242,7 @@
 "balance.info.detail.pledge" = "Kumuha ng Quota";
 "balance.info.detail.exchange.vite" = "Palitan sa VITE";
 "balance.info.detail.pledge.count.content" = "Pwede Gastusin na Quota / Limitasyon ng Quota";
-"balance.info.detail.pledge.none.tip" = "0 UT/0 UT";
+"balance.info.detail.pledge.none.tip" = "0 Quota/0 Quota";
 
 "gateway.info.detail.page.title" = "Mga Detalye ng Gateway";
 "gateway.info.detail.page.name" = "Pangalan ng Gateway";
@@ -401,7 +401,7 @@
 "quota.alert.pow.button.title" = "Patakbuhin ang Pow";
 "quota.alert.quota.button.title" = "Mag-Stake ng VITE";
 "quota.float.view.title" = "Pag-compute ng PoW upang I-secure ang Quota para sa Transaksyon na ito...";
-"quota.float.view.tip" = "Ang Transaksyon na ito ay nagkakahalaga ng %@ UT";
+"quota.float.view.tip" = "Ang Transaksyon na ito ay nagkakahalaga ng %@ Quota";
 
 "quota.pow.tip.float.view.title.1" = "Insufficient quota";
 "quota.pow.tip.float.view.message.1" = "Only %@ transactions can be made per day per address without staking VITE. Your address has exhausted all %@ transactions. Please go to the quota page and stake your VITE to perform more transactions.";
@@ -414,7 +414,7 @@
 
 
 "quota.pow.finished.float.view.title" = "Naipadala na ang Transaksyon";
-"quota.pow.finished.float.view.h1" = "Nagastos mo ang %1$@S sa pagkalkulang PoW na ito, at na-secure at ginamit ang %2$@UT.";
+"quota.pow.finished.float.view.h1" = "Nagastos mo ang %1$@S sa pagkalkulang PoW na ito, at na-secure at ginamit ang %2$@Quota.";
 "quota.pow.finished.float.view.h2" = "Maaari mong bawiin ang iyong na-staked na VITE pagkalipas ng 3 araw. Kung ang natanggap mong quota mula sa staking ay sapat para sa isang transaksyon, maaari mong laktawan ang hakbang na ito ng PoW.";
 "quota.pow.finished.float.view.pledge.button.title" = "Mag-transact nang mas mabilis sa pamamagitan ng Staking";
 
