--- a/ViteBusiness/Assets/es-ES.lproj/Localizable.strings
+++ b/ViteBusiness/Assets/es-ES.lproj/Localizable.strings
@@ -345,10 +345,8 @@
 "system.page.cell.change.currency" = "Tipo de moneda";
 "system.page.cell.node.settings" = "Ajustes del nodo";
 "system.page.cell.login.pwd" = "Desbloquear por contraseña";
-"system.page.cell.login.faceId" = "Desbloquear con Face ID";
-"system.page.cell.login.touchId" = "Desbloquear con Touch ID";
-"system.page.cell.transfer.faceId" = "Usar el FaceID para confirmar transacción";
-"system.page.cell.transfer.touchId" = "Usar el TouchID para confirmar transacción";
+"system.page.cell.login.faceId" = "Face ID";
+"system.page.cell.login.touchId" = "Touch ID";
 "system.page.cell.logout.title" = "Cerrar sesión/cambiar de billetera";
 "system.page.cell.upload.log.title" = "Subir registro";
 "system.page.cell.upload.log.toast.success" = "Registro subido";
