--- a/ViteBusiness/Assets/fr-FR.lproj/Localizable.strings
+++ b/ViteBusiness/Assets/fr-FR.lproj/Localizable.strings
@@ -345,10 +345,8 @@
 "system.page.cell.change.currency" = "Currency";
 "system.page.cell.node.settings" = "Node Settings";
 "system.page.cell.login.pwd" = "Unlock By Password";
-"system.page.cell.login.faceId" = "Unlock By Face ID";
-"system.page.cell.login.touchId" = "Unlock By Touch ID";
-"system.page.cell.transfer.faceId" = "Use Face ID For Transaction";
-"system.page.cell.transfer.touchId" = "Use Touch ID For Transaction";
+"system.page.cell.login.faceId" = "Face ID";
+"system.page.cell.login.touchId" = "Touch ID";
 "system.page.cell.logout.title" = "Logout/switch wallet";
 "system.page.cell.upload.log.title" = "Upload Log";
 "system.page.cell.upload.log.toast.success" = "Log Uploaded";
