--- a/ViteBusiness/Assets/ru-RU.lproj/Localizable.strings
+++ b/ViteBusiness/Assets/ru-RU.lproj/Localizable.strings
@@ -184,12 +184,23 @@
 "my.page.contacts.cell.title" = "Адрес контакта";
 "my.page.mnemonic.cell.title" = "Мнемонические слова";
 "my.page.system.cell.title" = "Настройки";
+"my.page.security.cell.title" = "Security";
 "my.page.invite.cell.title" = "Награды приглашенных";
 "my.page.reward.cell.title" = "Запрос на награду";
 "my.page.forum.cell.title" = "Официальный форум";
 "my.page.aboutUs.cell.title" = "О нас";
 "my.page.change.wallet.name.alter.title" = "Изменить имя аккаунта";
 "my.page.aboutUs.wechat.alert.title" = "Отсканируйте QR-код, чтобы подписаться на официальный аккаунт Vite WeChat";
+
+/* change password */
+"change.password.page.title" = "修改密码";
+"change.password.page.old.title" = "输入原密码";
+"change.password.page.new.1.title" = "输入新密码";
+"change.password.page.new.2.title" = "再次输入新密码";
+"change.password.page.button.title" = "提交修改";
+"change.password.page.success.toast" = "修改成功";
+"change.password.page.old.error.toast" = "原密码错误";
+"change.password.page.new.error.toast" = "两次输入的新密码不一致";
 
 /* Transaction List */
 "transaction.list.page.title" = "История транзакций";
@@ -1237,6 +1248,32 @@
 "spot.page.cell.price" = "Цена: %@";
 "spot.page.cell.deal" = "Заполнено: %@";
 "spot.page.cell.average" = "Ср.: %@";
+
+// Spot History
+"spot.history.page.title" = "Order book";
+"spot.history.page.segment.open" = "Open Orders";
+"spot.history.page.segment.history" = "Order History";
+
+"spot.history.page.filter.title" = "条件筛选";
+"spot.history.page.filter.button.clear" = "Clear";
+"spot.history.page.filter.all" = "All";
+"spot.history.page.filter.date.title" = "Date";
+"spot.history.page.filter.date.3m" = "3 months";
+"spot.history.page.filter.date.1m" = "1 months";
+"spot.history.page.filter.date.1w" = "1 week";
+"spot.history.page.filter.date.1d" = "1 day";
+
+"spot.history.page.filter.token.title" = "Type";
+
+"spot.history.page.filter.side.title" = "Side";
+"spot.history.page.filter.side.buy" = "Buy";
+"spot.history.page.filter.side.sell" = "Sell";
+
+"spot.history.page.filter.status.title" = "Status";
+"spot.history.page.filter.status.open" = "Ongoing";
+"spot.history.page.filter.status.completed" = "Completed";
+"spot.history.page.filter.status.canceled" = "Cancelled";
+"spot.history.page.filter.status.failed" = "Failed";
 
 "grin.initing.desc" = "Синхронизация, нажмите для просмотра подробностей";
 "grin.initing.detail" = "1 Синхронизация требуется после добавления GRIN кошелька\n 2.Процесс должен длиться не менее 15 минут\n 3. Не прерывать или закрывать приложение во время синхронизации\n 4. Синхронизация расходует большое количество трафика, рекомендуется использовать Wi-Fi.";
