--- a/ViteBusiness/Assets/tr-TR.lproj/Localizable.strings
+++ b/ViteBusiness/Assets/tr-TR.lproj/Localizable.strings
@@ -184,12 +184,23 @@
 "my.page.contacts.cell.title" = "İletişim Adresi";
 "my.page.mnemonic.cell.title" = "Anımsatıcı Kelimeler";
 "my.page.system.cell.title" = "Ayarlar";
+"my.page.security.cell.title" = "Security";
 "my.page.invite.cell.title" = "Madencilik Referansları";
 "my.page.reward.cell.title" = "Ödül Sorgulama";
 "my.page.forum.cell.title" = "Resmi Forum";
 "my.page.aboutUs.cell.title" = "Hakkımızda";
 "my.page.change.wallet.name.alter.title" = "Hesap Adını Düzenle";
 "my.page.aboutUs.wechat.alert.title" = "Vite WeChat Resmi Hesabına ulaşmak için QR kodu tarayın";
+
+/* change password */
+"change.password.page.title" = "修改密码";
+"change.password.page.old.title" = "输入原密码";
+"change.password.page.new.1.title" = "输入新密码";
+"change.password.page.new.2.title" = "再次输入新密码";
+"change.password.page.button.title" = "提交修改";
+"change.password.page.success.toast" = "修改成功";
+"change.password.page.old.error.toast" = "原密码错误";
+"change.password.page.new.error.toast" = "两次输入的新密码不一致";
 
 /* Transaction List */
 "transaction.list.page.title" = "İşlem Geçmişi";
@@ -1237,6 +1248,32 @@
 "spot.page.cell.price" = "Fiyat: %@";
 "spot.page.cell.deal" = "Tamamlanan: %@";
 "spot.page.cell.average" = "Ort.: %@";
+
+// Spot History
+"spot.history.page.title" = "Order book";
+"spot.history.page.segment.open" = "Open Orders";
+"spot.history.page.segment.history" = "Order History";
+
+"spot.history.page.filter.title" = "条件筛选";
+"spot.history.page.filter.button.clear" = "Clear";
+"spot.history.page.filter.all" = "All";
+"spot.history.page.filter.date.title" = "Date";
+"spot.history.page.filter.date.3m" = "3 months";
+"spot.history.page.filter.date.1m" = "1 months";
+"spot.history.page.filter.date.1w" = "1 week";
+"spot.history.page.filter.date.1d" = "1 day";
+
+"spot.history.page.filter.token.title" = "Type";
+
+"spot.history.page.filter.side.title" = "Side";
+"spot.history.page.filter.side.buy" = "Buy";
+"spot.history.page.filter.side.sell" = "Sell";
+
+"spot.history.page.filter.status.title" = "Status";
+"spot.history.page.filter.status.open" = "Ongoing";
+"spot.history.page.filter.status.completed" = "Completed";
+"spot.history.page.filter.status.canceled" = "Cancelled";
+"spot.history.page.filter.status.failed" = "Failed";
 
 "grin.initing.desc" = "Başlatılıyor, ayrıntıları görüntülemek için tıklayın";
 "grin.initing.detail" = "1. GRIN cüzdanı eklendikten sonra başlatma gereklidir\n2. İşlemin 15 dakika sürmesi beklenmektedir\n3. Başlatma sırasında APP'i kesintiye uğratmayın veya sonlandırmayın\n4. Başlatma büyük miktarda hücresel veri tüketir, işleme Wi-Fi üzerinden devam etmeniz önerilir.";
