--- a/ViteBusiness/Assets/vi-VN.lproj/Localizable.strings
+++ b/ViteBusiness/Assets/vi-VN.lproj/Localizable.strings
@@ -184,12 +184,23 @@
 "my.page.contacts.cell.title" = "Địa chỉ liên hệ";
 "my.page.mnemonic.cell.title" = "Cụm từ khôi phục ví";
 "my.page.system.cell.title" = "Cài đặt";
+"my.page.security.cell.title" = "Security";
 "my.page.invite.cell.title" = "Khai thác Giới thiệu";
 "my.page.reward.cell.title" = "Yêu cầu Phần thưởng";
 "my.page.forum.cell.title" = "Diễn đàn Chính thức";
 "my.page.aboutUs.cell.title" = "Giới thiệu về chúng tôi";
 "my.page.change.wallet.name.alter.title" = "Sửa tên tài khoản";
 "my.page.aboutUs.wechat.alert.title" = "Quét mã QR để theo dõi Tài khoản Wechat chính thức của Vite";
+
+/* change password */
+"change.password.page.title" = "修改密码";
+"change.password.page.old.title" = "输入原密码";
+"change.password.page.new.1.title" = "输入新密码";
+"change.password.page.new.2.title" = "再次输入新密码";
+"change.password.page.button.title" = "提交修改";
+"change.password.page.success.toast" = "修改成功";
+"change.password.page.old.error.toast" = "原密码错误";
+"change.password.page.new.error.toast" = "两次输入的新密码不一致";
 
 /* Transaction List */
 "transaction.list.page.title" = "Lịch sử Giao dịch";
@@ -1237,6 +1248,32 @@
 "spot.page.cell.price" = "Giá: %@";
 "spot.page.cell.deal" = "Đã khớp: %@";
 "spot.page.cell.average" = "Trung bình: %@";
+
+// Spot History
+"spot.history.page.title" = "Order book";
+"spot.history.page.segment.open" = "Open Orders";
+"spot.history.page.segment.history" = "Order History";
+
+"spot.history.page.filter.title" = "条件筛选";
+"spot.history.page.filter.button.clear" = "Clear";
+"spot.history.page.filter.all" = "All";
+"spot.history.page.filter.date.title" = "Date";
+"spot.history.page.filter.date.3m" = "3 months";
+"spot.history.page.filter.date.1m" = "1 months";
+"spot.history.page.filter.date.1w" = "1 week";
+"spot.history.page.filter.date.1d" = "1 day";
+
+"spot.history.page.filter.token.title" = "Type";
+
+"spot.history.page.filter.side.title" = "Side";
+"spot.history.page.filter.side.buy" = "Buy";
+"spot.history.page.filter.side.sell" = "Sell";
+
+"spot.history.page.filter.status.title" = "Status";
+"spot.history.page.filter.status.open" = "Ongoing";
+"spot.history.page.filter.status.completed" = "Completed";
+"spot.history.page.filter.status.canceled" = "Cancelled";
+"spot.history.page.filter.status.failed" = "Failed";
 
 "grin.initing.desc" = "Đang khởi tạo, nhấp để xem chi tiết";
 "grin.initing.detail" = "1 Khởi tạo là bắt buộc khi thêm ví GRIN \n2. Quá trình này dự kiến sẽ kéo dài 15 phút \n3. Không làm gián đoạn hoặc tắt APP trong quá trình khởi tạo \n4. Khởi tạo sẽ tiêu tốn một lượng lớn dữ liệu di động, bạn nên sử dụng Wi-Fi.";
