--- a/ViteBusiness/Assets/zh-Hans.lproj/Localizable.strings
+++ b/ViteBusiness/Assets/zh-Hans.lproj/Localizable.strings
@@ -196,24 +196,14 @@
 "my.page.aboutUs.wechat.alert.title" = "掃描二維碼關注Vite官方公眾號";
 
 /* change password */
-"change.password.page.title" = "修改密码";
-"change.password.page.old.title" = "输入原密码";
-"change.password.page.new.1.title" = "输入新密码";
-"change.password.page.new.2.title" = "再次输入新密码";
+"change.password.page.title" = "修改密碼";
+"change.password.page.old.title" = "輸入原密碼";
+"change.password.page.new.1.title" = "輸入新密碼";
+"change.password.page.new.2.title" = "再次輸入新密碼";
 "change.password.page.button.title" = "提交修改";
 "change.password.page.success.toast" = "修改成功";
-"change.password.page.old.error.toast" = "原密码错误";
-"change.password.page.new.error.toast" = "两次输入的新密码不一致";
-
-/* change password */
-"change.password.page.title" = "修改密码";
-"change.password.page.old.title" = "输入原密码";
-"change.password.page.new.1.title" = "输入新密码";
-"change.password.page.new.2.title" = "再次输入新密码";
-"change.password.page.button.title" = "提交修改";
-"change.password.page.success.toast" = "修改成功";
-"change.password.page.old.error.toast" = "原密码错误";
-"change.password.page.new.error.toast" = "两次输入的新密码不一致";
+"change.password.page.old.error.toast" = "原密碼錯誤";
+"change.password.page.new.error.toast" = "兩次輸入的新密碼不一致";
 
 /* Transaction List */
 "transaction.list.page.title" = "交易記錄";
@@ -368,7 +358,8 @@
 "system.page.cell.change.language" = "語言選擇";
 "system.page.cell.change.currency" = "貨幣單位";
 "system.page.cell.node.settings" = "節點設置";
-"system.page.cell.login.pwd" = "自动锁定";
+"system.page.cell.pow.settings" = "PoW設置";
+"system.page.cell.login.pwd" = "自動鎖定";
 "system.page.cell.login.faceId" = "Face ID";
 "system.page.cell.login.touchId" = "Touch ID";
 "system.page.cell.logout.title" = "退出並切換錢包";
@@ -384,6 +375,13 @@
 "node.settings.page.add.alert.tip" = "當前節點為 %@ ，網絡為 Mainnet";
 "node.settings.page.node.invalid.error" = "節點無效";
 "node.settings.page.node.exist.error" = "節點已經存在";
+
+/* pow settings */
+"pow.settings.page.title" = "PoW設置";
+"pow.settings.page.add.button.title" = "添加自定义PoW";
+"pow.settings.page.add.alert.title" = "請輸入有效的PoW鏈接";
+"pow.settings.page.add.alert.tip" = "當前網絡為Mainnet";
+"pow.settings.page.node.exist.error" = "已經存在";
 
 /* about us */
 "aboutUs.page.cell.blockHeight" = "當前區塊高度";
@@ -800,7 +798,7 @@
 "crosschain.deposit.otherwallet" = "其他錢包轉入";
 "crosschain.deposit.history" = "充值記錄";
 "crosschain.withdraw.history" = "提現記錄";
-"crosschain.deposit.minAmountDesc" = "Only %1$@ can be deposited to the address below. The minimum deposit is %2$@. Deposits less than %3$@ will be locked and unrecoverable.";
+"crosschain.deposit.minAmountDesc" = "只有 %1$@ 可以存入以下地址。最低充值為 %2$@。少於 %3$@ 的充值將無法入賬。";
 "crosschain.deposit.minComfirm" = "%@個網絡確認之後到賬，請耐心等待";
 "crosschain.deposit.selectDesc" = "請選擇正確的主網，否則代幣丟失將無法找回";
 "crosschain.deposit.address" = "充值地址";
@@ -1273,7 +1271,7 @@
 "spot.history.page.segment.open" = "當前委託";
 "spot.history.page.segment.history" = "歷史委託";
 
-"spot.history.page.filter.title" = "条件筛选";
+"spot.history.page.filter.title" = "條件篩選";
 "spot.history.page.filter.button.clear" = "清空";
 "spot.history.page.filter.all" = "全部";
 "spot.history.page.filter.date.title" = "日期";
