--- a/ViteBusiness/Assets/ja-JP.lproj/Localizable.strings
+++ b/ViteBusiness/Assets/ja-JP.lproj/Localizable.strings
@@ -781,7 +781,7 @@
 "grin.detail.slateCopied" = "Slate ID Copied.";
 "grin.send.illegalAmmount" = "Illegal transfer amount";
 "grin.detail.gatewayResend" = "Request for Vite gateway to Resend";
-"grin.export.mnemonic" = "Export Seed Phrase";
+"grin.export.mnemonic" = "Export Grin Seed Phrase";
 
 // CrossChain Transfer & Receive
 
